# BTech-Fourth-Semester

./: .gitignore  CMakeLists.txt  CS435P (COA) - Shortcut.lnk  MSE Lab - March 2023.xlsx  README.md
AIML451/: Data Handlinng Using Pandas_Labprograms.docx  Data_Analysis_and_Visualization_Lab8.docx
AIML451/dummy/: ocr.py
AIML451/exp1/experiments/: %op.py  exp1outputs.py  singlelineio.py  stringop.py  valchange.py  var&lit.py
AIML451/exp1/experiments/obs/: %op.py  boollit.py  range.py  string.py  stringop.py  valConst.py
AIML451/exp1/experiments/output/: exp1_out.docx
AIML451/exp1/experiments/record/: addition.py  area.py  christ.py  demo.py  intenderr.py  itvscript.py  range.py  type().py
AIML451/exp10/: exp10.ipynb  exp10_images.docx  histogram_ploting.docx
AIML451/exp2/experiments/: abs().py  all.py  any.py  arithmetic.py  assignment.py  bitwise.py  bool.py  callable.py  comparison.py  compile.py  dict.py  identity.py  list.py  logical.py  map.py  membership.py  myFile.txt  oct.py  open.py  reversed.py  set.py  sorted.py  str.py  tuple.py
AIML451/exp3/: EXP-3 Observation.ipynb  EXP-3 Record.ipynb
AIML451/exp3/.ipynb_checkpoints/: EXP-3 Observation-checkpoint.ipynb  EXP-3 Record-checkpoint.ipynb
AIML451/exp4/: exp4.ipynb
AIML451/exp5/: exp5.ipynb
AIML451/exp6/: exp6.ipynb
AIML451/exp7/: 2162014-demo2(dup).txt  2162014.txt  exp7.ipynb
AIML451/exp8/: abc  abc.txt  bcd  call_mod.py  cde  exp8.ipynb  greet_mod.py
AIML451/exp9/: DataFrame1.csv  DataFrame2.csv  data.csv  emp.csv  exp9.ipynb
CS432P (OS)/: exp3.txt  index.txt
CS432P (OS)/exp1/experiments/: calculator.sh  copydir.sh  factorial.sh  fibonacci.sh  largestof2.sh  largestof3.sh  oddeven.sh  palindrome.sh  swapwithouttemp.sh  swapwithtemp.sh
CS432P (OS)/exp10/: exp10_images.docx  exp10a.c  exp10b.c
CS432P (OS)/exp3/: exp3  exp3.c
CS432P (OS)/exp4/: exp.c
CS432P (OS)/exp5/: FCFS.c  SJF.c  exp5a.c  exp5a_1.c  exp5a_2.c  exp5b.c  exp5b_3.c  exp5b_4.c  priority.c  round_robin.c
CS432P (OS)/exp5/mine/: exp5a_1.c  exp5a_2.c  exp5b_3.c  exp5b_4.c
CS432P (OS)/exp6/: exp6.c
CS432P (OS)/exp7/: exp7.c
CS432P (OS)/exp8/: EXP8_IMGS.docx  exp8a.c  exp8b.c
CS432P (OS)/exp9/: exp9_images.docx  exp9a.c  exp9b.c
CS433P/: .project
CS433P (OOP)/EXP1/: pom.xml
CS433P (OOP)/EXP1/src/main/java/: ChkPrime.java  Grtof3.java  Input.java  OddEven.java  Smlof3.java
CS433P (OOP)/FirstProject/src/main/java/: Hello.java  Input.java
CS433P (OOP)/exp1/: Calculator.java
CS433P (OOP)/exp1b/: Array_demo.java
CS433P (OOP)/exp2/: Distanceaddition.java
CS433P (OOP)/experiment/: PP lab program.docx
CS433P (OOP)/experiment/demo/EVNTHNDL_PPT/: ActionListenerExample.java  ActionMouse.java  AdapterExample.java  Border.java  CheckBox.java  ComboBox.java  ComboBoxExample.java  FirstSwingExample.java  ItemListenerExample.java  MenuExample.java  MyFlowLayout.java  MyGridLayout.java  OptionPaneExample.java  PasswordFieldExample.java  Radiobutton.java  ScrollBarExample.java  Table.java  TextAreaExample.java  TextFieldExample.java  TextFieldExample2.java  components.java  fontimage.java
CS433P (OOP)/experiment/demo/Event_Handling/: Bank.java  ExceptionHandlingExample.java  FinallyExample.java  MultipleCatchBlocksExample.java  NestedTryBlock.java  ThrowExample.java  ThrowsExample.java  TryCatchExample.java  syntax
CS433P (OOP)/experiment/demo/Threads/: Customers.java  Multi.java  Multi3.java
CS433P (OOP)/experiment/demo/jwork/: Calculator.java  Main.java  Person.java  Student.java  studentBahaviours.java
CS433P (OOP)/experiment/demo/oop/: Example.java  Frequency.java  Input.java  JavaExample.java  JavaExample1.java  palindrome.java  prog1.java
CS433P (OOP)/experiment/demo/oop/Matrix Operations/: MatrixAdditionExample.java  MatrixMultiplicationExample.java
CS433P (OOP)/experiment/demo/others/: LayoutDemo.java  gui.java
CS433P (OOP)/experiment/exp1b/: Array_demo.java
CS433P (OOP)/experiment/exp3/: interBank.java
CS433P (OOP)/experiment/exp4/: OuterClass.java
CS433P (OOP)/experiment/exp5/: UI_demo.java
CS433P (OOP)/experiment/exp6/: VehicleGame.java
CS433P (OOP)/experiment/exp7/: excep.java
CS433P (OOP)/experiment/exp8/: Stack.java
CS433P (OOP)/experiment/exp9/: th.java
CS433P (OOP)/experiment/prac1/src/main/java/: ChkPrime.java  Grtof3.java  Input.java  OddEven.java
CS433P (OOP)/prac1/src/main/java/: Smlof3.java
CS433P (OOP)/project/: 2022_Mini project Report_OOP.docx  CSE - AIML(PP)_PROJECT.docx
CS433P (OOP)/project/report/: 2022_Mini project Report format.docx  2022_Mini project Report_OOP.docx  CSE - AIML(PP)_PROJECT.docx
CS433P (OOP)/project/report/reference/: EMAIL CLIENT SYSTEM.docx
CS433P (OOP)/project/source/Function-Grapher-master/src/fuzzycat/functiongrapher/: Main.java
CS433P (OOP)/record/: CSE - AIML(PP).docx  OOP_experiment_1.docx  OOP_experiment_1a.docx  OOP_experiment_1b.docx  OOP_experiment_2 - Copy (2).docx  OOP_experiment_2.docx  OOP_experiment_3.docx  OOP_experiment_4.docx  OOP_experiment_5.docx  OOP_experiment_6.docx  OOP_experiment_7.docx  OOP_experiment_8.docx  OOP_experiment_9.docx  OOP_record_front(new).docx  OOP_record_front.docx  ~$P_experiment_6.docx  ~WRL1205.tmp
CS433P (OOP)/src/: module-info.java
CS435P (COA)/data/: COA-experiment1-worksheet.docx  COA-experiment2-worksheet.docx  COA-experiment3-worksheet.docx  COA-experiment4-worksheet.docx  COA-experiment5-worksheet.docx  COA-experiment6-worksheet.docx  COA-experiment7-worksheet.docx  COA-experiment8-worksheet.docx  COA_record_front.docx  CSE - AIML Certificate.docx  Ex 10_1.docx  Ex 10_2.docx  Ex 9.docx  ~$A-experiment1-worksheet.docx  ~WRL0003.tmp
CS435P (COA)/experiments/: decrement.sas  exp-1.sas  exp-4.sas  exp10_1.2_plot.py  exp10_1.3_plot.py  exp10_1.5.sas  exp10_1.sas  exp10_2.1_plot.py  exp10_2.2_plot.py  exp10_2.3_plot.py  exp2.sas  exp3.sas  exp5.1.sas  exp5.2.sas  exp5.3.sas  exp5.4.sas  exp5.5.sas  exp6.1.sas  exp6.2.sas  exp7.a.sas  exp7.b.sas  exp8.sas  exp9.2  exp9.3_plot.py  exp9.sas  routine_demo_1.sas  routine_demo_2.sas
CS435P/experiments/: exp1.sas
(+32 files in other folders)
